--- a/public/index.html
+++ b/public/index.html
@@ -7,23 +7,23 @@
     
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@vercel"/>
-    <meta property="og:site_name" content="OGP画像自動生成つ～る"/>
+    <meta property="og:site_name" content="OGP画像自動生成ツール"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:title" content="OGP画像自動生成つ～る"/>
+    <meta property="og:title" content="OGP画像自動生成ツール"/>
     <meta property="og:locale" content="ja"/>
-    <meta property="og:url" content="https://og-image.eyemono.moe/"/>
-    <link rel="canonical" href="https://og-image.eyemono.moe/"/>
+    <meta property="og:url" content="https://og-image.yu9824.com"/>
+    <link rel="canonical" href="https://og-image.yu9824.com"/>
     <meta name="description" content="OGP画像自動生成ツール - generate cards for Twitter, Facebook, Slack, etc."/>
     <meta property="og:description" content="OGP画像自動生成ツール - generate cards for Twitter, Facebook, Slack, etc."/>
-    <meta property="og:image" content="https://og-image.eyemono.moe/**OGP%E7%94%BB%E5%83%8F**%E8%87%AA%E5%8B%95%E7%94%9F%E6%88%90%E3%83%84%E3%83%BC%E3%83%AB.png?pattern=none&md=1&fontSize=75px&textColor=%23404040&textStrongColor=%238340BB&overlay=https%3A%2F%2Fog-image.eyemono.moe%2FOGP_overlay.png"/>
-    <title>OGP画像自動生成つ～る</title>
+    <meta property="og:image" content="https://og-image.yu9824.com**OGP%E7%94%BB%E5%83%8F**%E8%87%AA%E5%8B%95%E7%94%9F%E6%88%90%E3%83%84%E3%83%BC%E3%83%AB.png?pattern=none&md=1&fontSize=75px&textColor=%23404040&textStrongColor=%238340BB&overlay=https%3A%2F%2Fog-image.eyemono.moe%2FOGP_overlay.png"/>
+    <title>OGP画像自動生成ツール</title>
     <meta name="viewport" content="width=device-width, maximum-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
     <div class="container">
         <div class="wrapper">
-            <a href="https://github.com/detteiu8383/og-image-1" class="github-corner" aria-label="View source on GitHub">
+            <a href="https://github.com/yu9824/og-image" class="github-corner" aria-label="View source on GitHub">
                 <svg width="80" height="80" viewBox="0 0 250 250" class="svg">
                     <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
                     <path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path>
@@ -31,7 +31,7 @@
                 </path>
                 </svg>
             </a>
-            <h1 class="center">OGP画像自動生成つ～る</h1>
+            <h1 class="center">OGP画像自動生成ツール</h1>
             <h4 class="center">forked from <a href="https://github.com/vercel/og-image">vercel/og-image</a></h4>
             <div id="app">
                 <em>Loading...</em>
