--- a/public/index.html
+++ b/public/index.html
@@ -7,18 +7,31 @@
     
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@vercel"/>
+    <meta name="twitter:creator" content="@yu_9824">
+
     <meta property="og:site_name" content="OGP画像自動生成ツール"/>
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="OGP画像自動生成ツール"/>
-    <meta property="og:locale" content="ja"/>
+    <meta property="og:locale" content="ja_JP"/>
     <meta property="og:url" content="https://og-image.yu9824.com"/>
     <link rel="canonical" href="https://og-image.yu9824.com"/>
     <meta name="description" content="OGP画像自動生成ツール - generate cards for Twitter, Facebook, Slack, etc."/>
     <meta property="og:description" content="OGP画像自動生成ツール - generate cards for Twitter, Facebook, Slack, etc."/>
-    <meta property="og:image" content="https://og-image.yu9824.com**OGP%E7%94%BB%E5%83%8F**%E8%87%AA%E5%8B%95%E7%94%9F%E6%88%90%E3%83%84%E3%83%BC%E3%83%AB.png?pattern=none&md=1&fontSize=75px&textColor=%23404040&textStrongColor=%238340BB&overlay=https%3A%2F%2Fog-image.eyemono.moe%2FOGP_overlay.png"/>
+    <meta property="og:image" content="https://og-image.yu9824.com/**OGP%E7%94%BB%E5%83%8F**%E8%87%AA%E5%8B%95%E7%94%9F%E6%88%90%E3%83%84%E3%83%BC%E3%83%AB.png?pattern=none&md=1&fontSize=50px&textColor=%233b3b38&textStrongColor=%2345859c&overlay=https%3A%2F%2Fog-image.yu9824.com%2FOGP_overlay.png"/>
     <title>OGP画像自動生成ツール</title>
     <meta name="viewport" content="width=device-width, maximum-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3EVTJECG5G"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-3EVTJECG5G');
+    </script>
+    
 </head>
 <body>
     <div class="container">
