--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
 <body>
     <div class="container">
         <div class="wrapper">
-            <a href="https://github.com/yu9824/og-image" class="github-corner" aria-label="View source on GitHub">
+            <a href="https://github.com/yu9824/og-image" class="github-corner" aria-label="View source on GitHub" target="_blank" rel="noopener">
                 <svg width="80" height="80" viewBox="0 0 250 250" class="svg">
                     <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
                     <path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path>
@@ -45,16 +45,16 @@
                 </svg>
             </a>
             <h1 class="center">OGP画像自動生成ツール</h1>
-            <h4 class="center">forked from <a href="https://github.com/vercel/og-image">vercel/og-image</a></h4>
+            <h4 class="center">forked from <a href="https://github.com/vercel/og-image" target="_blank" rel="noopener">vercel/og-image</a></h4>
             <div id="app">
                 <em>Loading...</em>
             </div>
             <div class="center">
-                <h2>これは何</h2>
-                <p>動的に <a href="http://ogp.me">OGP</a> 画像を生成できるサービスです。 <code>&lt;meta&gt;</code> タグとかに埋め込んで使えます。</p>
-                <p>puppeteerでイイ感じにスクリーンショットを撮影しています。</p>
-                <p>詳しくは <a href="https://github.com/vercel/og-image">フォーク元のリポジトリ</a>をご覧ください。</p>
-                <footer>Proudly hosted on <a href="https://vercel.com">▲Vercel</a></footer>
+                <h2>これは何？</h2>
+                <p>動的に <a href="http://ogp.me" target="_blank" rel="noopener">OGP</a> 画像を生成できるサービスです． <code>&lt;meta&gt;</code> タグなどに埋め込んで使えます．</p>
+                <p>puppeteerでイイ感じにスクリーンショットを撮影しています．</p>
+                <p>詳しくは <a href="https://github.com/detteiu8383/eyemono-og-image" target="_blank" rel="noopener">フォーク元のリポジトリ</a> もしくは，<a href="https://github.com/vercel/og-image" target="_blank" rel="noopener">フォーク大元のリポジトリ</a> をご覧ください．</p>
+                <footer>Proudly hosted on <a href="https://vercel.com" target="_blank" rel="noopener">▲Vercel</a></footer>
             </div>
         </div>
     </div>
