--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <link rel="canonical" href="https://og-image.yu9824.com/"/>
     <meta name="description" content="OGP画像自動生成ツール - generate cards for Twitter, Facebook, Slack, etc."/>
     <meta property="og:description" content="OGP画像自動生成ツール - generate cards for Twitter, Facebook, Slack, etc."/>
-    <meta property="og:image" content="**OGP%E7%94%BB%E5%83%8F**%E8%87%AA%E5%8B%95%E7%94%9F%E6%88%90%E3%83%84%E3%83%BC%E3%83%AB.png?pattern=none&md=1&fontSize=75px&width=1100px&textColor=%233b3b38&textStrongColor=%2345859c&overlay=https%3A%2F%2Fog-image.yu9824.com%2FOGP_overlay.png"/>
+    <meta property="og:image" content="https://og-image.yu9824.com/**OGP%E7%94%BB%E5%83%8F**%E8%87%AA%E5%8B%95%E7%94%9F%E6%88%90%E3%83%84%E3%83%BC%E3%83%AB.png?pattern=none&md=1&fontSize=75px&width=1100px&textColor=%233b3b38&textStrongColor=%2345859c&overlay=https%3A%2F%2Fog-image.yu9824.com%2FOGP_overlay.png"/>
     <title>OGP画像自動生成ツール</title>
     <meta name="viewport" content="width=device-width, maximum-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
